--- a/package.json
+++ b/package.json
@@ -5,5 +5,12 @@
   "main": "index.js",
   "repository": "git@github.com:kirrg001/testing.git",
   "author": "kirrg001 <katharina.irrgang@googlemail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "ship": "STATUS=$(git status --porcelain); echo $STATUS; if [ -z \"$STATUS\" ]; then yarn version && git push --follow-tags; fi",
+    "postship": "gulp release"
+  },
+  "dependencies": {
+    "gulp": "^4.0.0"
+  }
 }
